# Evaluaciones_Compi_1

CompiladoresI_Examen1_P2_2020/: spl_grammar.txt  spl_grammar_ll1 copy.txt  spl_grammar_ll1.txt  spl_lexer.h  spl_parser.cpp  spl_parser.h
CompiladoresI_Examen1_P2_2020/fa/: identifier.jff  number.jff  operators.jff  relational_op.jff  spl_lexer.fa2l  start.jff  symbols.jff
CompiladoresI_Examen1_P2_2020/tests/: test_parser.cpp
Examen_P2_2020/: .gitignore
Examen_P2_2020/AST/: spl_ast.cpp  spl_ast.h
Examen_P2_2020/AST/tests/: CMakeLists.txt  test_ast.cpp
Prueba1_P2_2020/: const_lexer.h  main.cpp
Prueba1_P2_2020/fa/: const_lexer.fa2l  constants.jff
Prueba1_P2_2020/tests/: CMakeLists.txt
Prueba2_P2_2020/: grammar.txt  grammar_ENBF.txt  lexer.h  parser.cpp  parser.h
Prueba3_P2_2020/: expr_lexer.cpp  expr_lexer.h  expr_parser.cpp  expr_parser.h  grammar_slr.txt  grammar_slr2.txt
Prueba3_P2_2020/tests/: CMakeLists.txt  test_parser.cpp
Prueba3_P2_2020/tools/: ecc
